website/versioned_docs/version-2.8.x/reference/subsystems/twine.mdx
---
title: twine
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The utility for publishing Python distributions to PyPi and other Python repositories.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[twine]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]twine-skip`}
  env_repr="PANTS_TWINE_SKIP"
  default_repr={`False`}
>
  Don&#x27;t use Twine when running `./pants publish`.
</Option>

### `args`

<Option
  cli_repr={`--twine-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr="PANTS_TWINE_ARGS"
  default_repr={`[]`}
>
  Arguments to pass directly to Twine, e.g.
  `--twine-args='--skip-existing'`.&#x27;
</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--twine-version=<str>`}
  env_repr="PANTS_TWINE_VERSION"
  default_repr={`twine==3.6.0`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--twine-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_TWINE_EXTRA_REQUIREMENTS"
  default_repr={`["colorama>=0.4.3"]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--twine-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_TWINE_INTERPRETER_CONSTRAINTS"
  default_repr={`["CPython>=3.6"]`}
>
  Python interpreter constraints for this tool.
</Option>

### `lockfile`

<Option
  cli_repr={`--twine-lockfile=<str>`}
  env_repr='PANTS_TWINE_LOCKFILE'
  default_repr={`<default>`}
>
Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.8.1/src/python/pants/backend/python/subsystems/twine_lockfile.txt for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds.

To use a custom lockfile, set this option to a file path relative to the build root, then run `./pants generate-lockfiles --resolve=twine`.

Lockfile generation currently does not wire up the `[python-repos]` options. If lockfile generation fails, you can manually generate a lockfile, such as by using pip-compile or `pip freeze`. Set this option to the path to your manually generated lockfile. When manually maintaining lockfiles, set `[python].invalid_lockfile_behavior = 'ignore'`.

</Option>

### `console_script`

<Option
  cli_repr={`--twine-console-script=<str>`}
  env_repr="PANTS_TWINE_CONSOLE_SCRIPT"
  default_repr={`twine`}
>
  The console script for the tool. Using this option is generally preferable to
  (and mutually exclusive with) specifying an --entry-point since console script
  names have a higher expectation of staying stable across releases of the tool.
  Usually, you will not want to change this from the default.
</Option>

### `entry_point`

<Option
  cli_repr={`--twine-entry-point=<str>`}
  env_repr="PANTS_TWINE_ENTRY_POINT"
  default_repr={`None`}
>
  The entry point for the tool. Generally you only want to use this option if
  the tool does not offer a --console-script (which this option is mutually
  exclusive with). Usually, you will not want to change this from the default.
</Option>

### `config`

<Option
  cli_repr={`--twine-config=<file_option>`}
  env_repr='PANTS_TWINE_CONFIG'
  default_repr={`None`}
>
Path to a .pypirc config file to use. (https://packaging.python.org/specifications/pypirc/)

Setting this option will disable `[twine].config_discovery`. Use this option if the config is located in a non-standard location.

</Option>

### `config_discovery`

<Option
  cli_repr={`--[no-]twine-config-discovery`}
  env_repr='PANTS_TWINE_CONFIG_DISCOVERY'
  default_repr={`True`}
>
If true, Pants will include all relevant config files during runs (`.pypirc`).

Use `[twine].config` instead if your config is in a non-standard location.

</Option>

### `ca_certs_path`

<Option
  cli_repr={`--twine-ca-certs-path=<str>`}
  env_repr='PANTS_TWINE_CA_CERTS_PATH'
  default_repr={`<inherit>`}
>
Path to a file containing PEM-format CA certificates used for verifying secure connections when publishing python distributions.

Uses the value from `[GLOBAL].ca_certs_path` by default. Set to `"<none>"` to not use the default CA certificate.

</Option>

## Deprecated options

None

</span>

